--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   },
   "keywords": [
     "mongodb",
-    "mongooes",
     "nodejs",
     "expressjs"
   ],
@@ -16,6 +15,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.1",
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "dotenv-flow": "^3.2.0",
+    "express": "^4.18.2",
+    "mongodb": "^4.13.0",
+    "mongoose": "^6.9.0"
   }
 }
