--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Api for events for a compulsory assignment with men. Men restfull api",
   "main": "server.js",
   "scripts": {
+    "start-dev" : "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
