--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cross-env": "^7.0.3",
     "dotenv-flow": "^3.2.0",
     "express": "^4.18.2",
+    "joi": "^17.7.1",
     "mongodb": "^4.13.0",
     "mongoose": "^6.9.0"
   }
