--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   "author": "Karolina Kosinska",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cross-env": "^7.0.3",
     "dotenv-flow": "^3.2.0",
     "express": "^4.18.2",
     "joi": "^17.7.1",
+    "jsonwebtoken": "^9.0.0",
     "mongodb": "^4.13.0",
     "mongoose": "^6.9.0"
   }
