--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "joi": "^17.7.1",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^4.13.0",
-    "mongoose": "^6.9.0"
+    "mongoose": "^6.9.0",
+    "swagger-ui-express": "^4.6.0",
+    "yamljs": "^0.3.0"
   }
 }
