--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongodb": "^4.13.0",
     "mongoose": "^6.9.0",
     "swagger-ui-express": "^4.6.0",
+    "typescript": "^4.9.5",
     "yamljs": "^0.3.0"
   }
 }
