--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cross-env": "^7.0.3",
     "dotenv-flow": "^3.2.0",
     "express": "^4.18.2",
+    "http-status": "^1.6.2",
     "joi": "^17.7.1",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^4.13.0",
