--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "cross-env": "^7.0.3",
+    "dayjs": "^1.11.7",
     "dotenv-flow": "^3.2.0",
     "express": "^4.18.2",
     "http-status": "^1.6.2",
