--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "event-api",
   "version": "1.0.0",
   "description": "Api for events for a compulsory assignment with men. Men restfull api",
-  "main": "server.js",
+  "main": "server.ts",
   "scripts": {
-    "start-dev": "nodemon server.js",
+    "start-dev": "nodemon server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -15,6 +15,8 @@
   "author": "Karolina Kosinska",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.17",
+    "@types/node": "^18.14.0",
     "bcrypt": "^5.1.0",
     "cross-env": "^7.0.3",
     "dayjs": "^1.11.7",
@@ -26,7 +28,11 @@
     "mongodb": "^4.13.0",
     "mongoose": "^6.9.0",
     "swagger-ui-express": "^4.6.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
     "yamljs": "^0.3.0"
+  },
+  "devDependencies": {
+    "@types/yamljs": "^0.2.31"
   }
 }
