--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^4.13.0",
     "mongoose": "^6.9.0",
+    "node-cron": "^3.0.2",
     "swagger-ui-express": "^4.6.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
